--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
   "name": "react-demo",
   "version": "0.1.0",
+  "main": "main.js",
   "private": true,
+  "homepage": ".",
   "dependencies": {
+    "@ant-design/icons": "^4.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "immer": "^6.0.5",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "electron ." ,
+    "package": "electron-packager . ElectronMS --platform=win32 --arch=x64"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "antd": "^4.2.2",
+    "electron": "^8.2.5",
+    "electron-packager": "^14.2.1"
   }
 }
