--- a/package.json
+++ b/package.json
@@ -4,25 +4,13 @@
   "main": "main.js",
   "private": true,
   "homepage": ".",
-  "dependencies": {
-    "@ant-design/icons": "^4.1.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "immer": "^6.0.5",
-    "immutable": "^4.0.0-rc.12",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
-  },
+  "dependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "electron ." ,
+    "dev": "electron .",
     "package": "electron-packager . ElectronMS --platform=win32 --arch=x64"
   },
   "eslintConfig": {
@@ -43,6 +31,17 @@
   "devDependencies": {
     "antd": "^4.2.2",
     "electron": "^8.2.5",
-    "electron-packager": "^14.2.1"
+    "electron-packager": "^14.2.1",
+    "@ant-design/icons": "^4.1.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "immer": "^6.0.5",
+    "immutable": "^4.0.0-rc.12",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1"
   }
 }
