--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "main.js",
   "private": true,
   "homepage": ".",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -29,13 +32,15 @@
     ]
   },
   "devDependencies": {
-    "antd": "^4.2.2",
-    "electron": "^8.2.5",
-    "electron-packager": "^14.2.1",
     "@ant-design/icons": "^4.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.2.2",
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "electron": "^8.2.5",
+    "electron-packager": "^14.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
