--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "electron .",
+    "server": "node ./src/server/index.js",
     "package": "electron-packager . ElectronMS --win --ia32"
   },
   "eslintConfig": {
@@ -41,6 +42,7 @@
     "body-parser": "^1.19.0",
     "electron": "^8.2.5",
     "electron-packager": "^14.2.1",
+    "moment": "^2.25.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
