--- a/package.json
+++ b/package.json
@@ -40,10 +40,14 @@
     "antd": "^4.2.2",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "echarts": "^4.8.0",
+    "echarts-for-react": "^2.0.16",
     "electron": "^8.2.5",
     "electron-packager": "^14.2.1",
     "js-export-excel": "^1.1.2",
     "moment": "^2.25.3",
+    "multer": "^1.4.2",
+    "node-xlsx": "^0.15.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
