--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eject": "react-scripts eject",
     "dev": "electron .",
     "server": "node ./src/server/index.js",
-    "package": "electron-packager . ElectronMS --win --ia32"
+    "package": "electron-packager . ElectronMS --win --ia32",
+    "packageMac": "electron-packager ./ --platform=darwin --arch=x64 --overwrite"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +45,7 @@
     "echarts-for-react": "^2.0.16",
     "electron": "^8.2.5",
     "electron-packager": "^14.2.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "js-export-excel": "^1.1.2",
     "moment": "^2.25.3",
     "multer": "^1.4.2",
