--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev": "electron .",
     "server": "node ./src/server/index.js",
     "package": "electron-packager . ElectronMS --win --ia32",
-    "packageMac": "electron-packager ./ --platform=darwin --arch=x64 --overwrite"
+    "packageMac": "electron-packager ./ --platform=win32 --arch=x64 --overwrite"
   },
   "eslintConfig": {
     "extends": "react-app"
