--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@babel/polyfill": "^7.11.5",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "raf": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
