--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "dev": "electron .",
-    "server": "node ./src/server/index.js",
+    "server": "nodemon ./src/server/index.js",
     "package": "electron-packager . ElectronMS --win --ia32",
     "packageMac": "electron-packager ./ --platform=win32 --arch=x64 --overwrite"
   },
